<resources>
    <string name="app_name">Inventory App</string>
    <string name="add_item_to_inventory">Add Item</string>
    <string name="logged_user">User Email: %s</string>
    <string name="item_description">Item Name</string>
    <string name="item_category">Item Category</string>
    <string name="enter_item_description">Enter Item Name</string>
    <string name="enter_item_category">Enter Item Category</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="increase_item_amount">increase item amount</string>
    <string name="decrease_item_amount">decrease item amount</string>
    <string name="_0">0</string>
    <string name="cancel">Cancel</string>
    <string name="add_item">Add Item</string>
    <string name="item_description_label">Item Desc.</string>
    <string name="quantity">Quantity</string>
    <string name="catgy">Catgy.</string>
    <string name="inventory_list">Inventory List</string>
    <string name="add_button_label">Add item</string>
    <string name="send_sms_message_button">Send SMS message</string>
    <string name="delete_all_button">Delete all items</string>
    <string name="sms">SMS</string>
    <string name="delete_all">Delete All</string>
    <string name="total">Total Items</string>
    <string name="Welcome">Welcome, %s!</string>
    <string name="email_address">Email Address</string>
    <string name="password_button">Password</string>
    <string name="_button">Login</string>
    <string name="new_user_button">New User</string>
    <string name="forgot_password_button">Forgot Password</string>

    <string name="inventory_logo_icon">inventory logo icon</string>
    <string name="register_icon">Register Icon</string>
    <string name="register_button">Register</string>
    <string name="register_activity_title">register</string>
    <string name="new_user_sign_up">New User Sign-Up</string>
    <string name="name">NAME</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="e_mail">E-MAIL</string>
    <string name="password">PASSWORD</string>
    <string name="sign_up_button">Sign-Up</string>
    <string name="item_name">Item Name</string>
    <string name="item_total">Item Total</string>
    <string name="category">Category</string>
    <string name="edit_item">Edit Item</string>
    <string name="edit_item_popup">Edit Item</string>
    <string name="item_description_popup">Item Description</string>
    <string name="item_quantity_popup">Item Quantity</string>
    <string name="item_category_popup">Item Category</string>
    <string name="save_item_popup">Save Item</string>

    <string name="forgot_popup_title">Forgot Password</string>
    <string name="forgot_hint">Enter Phone Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="get_button">Get</string>
    <string name="send_message">Send Message</string>

    <string name="delete_all_description">Delete All Items</string>
    <string name="delete_all_yes">Yes</string>
    <string name="delete_all_no">No</string>
    <string name="delete_title">Delete All Items</string>
    <string name="delete_all_msg">Delete all database items?</string>

    <string name="sms_description">SMS Notification</string>
    <string name="sms_title">App SMS Permission Needed</string>
    <string name="sms_msg">The app SMS feature requires permission to notified for items with zero inventory. You can enable or disable this feature at any time. However, you should allow the device permission request to use this app feature.</string>
    <string name="enable_button">Enable</string>
    <string name="disable_button">Disable</string>
    <string name="delete_item" />
    <string name="inventory_logo_brand_name" />
    <string name="facebook_icon" />
    <string name="website_icon" />
</resources>