<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- LOGO AND EMAIL & PASSWORD SECTION -->
    <LinearLayout
        android:id="@+id/email_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/social_links"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <!-- COMPANY LOGO ICON -->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/new_icon_no_back"
            android:contentDescription="@string/inventory_logo_icon" />

        <!-- COMPANY NAME IMAGE -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/brand_name_no_back"
            android:contentDescription="@string/inventory_logo_brand_name" />

        <!-- EMAIL ADDRESS INPUT -->
        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_corner_yellow"
            android:gravity="center"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textColor="#E7D506"
            android:textColorHint="#E7D506"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- PASSWORD INPUT -->
        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_corner_yellow"
            android:gravity="center"
            android:hint="@string/password_button"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="#E7D506"
            android:textColorHint="#E7D506"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- LOGIN BUTTON -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#E7D506"
            android:text="@string/_button"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- SOCIAL LINKS -->
    <LinearLayout
        android:id="@+id/social_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/email_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/fb_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/facebook_icon_no_back"
            android:contentDescription="@string/facebook_icon" />

        <ImageView
            android:id="@+id/website_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/web_icon_no_back"
            android:contentDescription="@string/website_icon" />
    </LinearLayout>

    <!-- BUTTON BUTTONS FORGOTTEN PASSWORD & NEW USER -->
    <Button
        android:id="@+id/newUser_button"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="32dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/new_user_button"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="#E7D506"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/forgot_button"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="32dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/forgot_password_button"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="#E7D506"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
