<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_popup_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_up_background">

    <TextView
        android:id="@+id/edit_popup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/edit_item_popup"
        android:textSize="34sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_popup_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:hint="@string/item_description_popup"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/black" 
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_item_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_item_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/item_quantity_popup"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_item_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_item_qty"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/item_category_popup"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_item_cat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_item_popup"
            android:backgroundTint="#E7D506"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/edit_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"
            android:backgroundTint="#E7D506"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
